lint, git, circleci, basics

--- a/projectWebsite/index.html
+++ b/projectWebsite/index.html
@@ -1,1 +1,12 @@
 <!DOCTYPE html>
+<html>
+    <head>
+        <title>myevent - Free & Open Source event management solution</title>
+        <link rel="stylesheet" href="/css/style.css">
+        <meta charset="utf-8">
+        <meta name="description" content="Looking for a free and open source event management solution you can host yourself? myevent is a project that does exactly that.">
+    </head>
+    <body>
+        <h1></h1>
+    </body>
+</html>
