initial setup of website

--- a/website/index.html
+++ b/website/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>myevent - Free & Open Source event management solution</title>
         <link rel="stylesheet" href="/css/style.css">
+        <link rel="stylesheet" href="/css/home.css">
         <meta charset="utf-8">
         <meta name="description" content="Looking for a free and open source event management solution you can host yourself? myevent is a project that does exactly that.">
     </head>
