--- a/src/server/ui/html/index.html
+++ b/src/server/ui/html/index.html
@@ -33,6 +33,7 @@
                 margin: 3%;
                 margin-bottom: 0;
                 border-radius: 50px;
+                width: 40%;
             }
 
             .button {
@@ -62,12 +63,12 @@
             <div class="lang presented" id="en">
                 <h1>Welcome to myevent!</h1>
                 <!-- <p>Thank you for installing and using myevent! Let's get started by setting it up! First plan of action is to log in to the admin panel where you can replace this page here with your own landing page!</p> -->
-                <a href="/admin/login" class="button">To the admin panel</a>
+                <a href="/admin/login" class="button" onclick="sessionStorage.setItem( 'lang', 'de' )">To the admin panel</a>
             </div>
             <div class="lang" id="de">
                 <h1>Willkommen zu myevent!</h1>
                 <!-- <p>Vielen Dank für die Installation und Nutzung von myevent! Beginnen wir mit dem Aufsetzen! Der erste Schritt ist, sich ins Admin-Panel einzuloggen um die Seite hier mit deiner eigenen Seite zu ersetzen!</p> -->
-                <a href="/admin/login?lang=de" class="button">Zum Admin-Panel</a>
+                <a href="/admin/login" class="button" onclick="sessionStorage.setItem( 'lang', 'de' )">Zum Admin-Panel</a>
             </div>
         </div>
         <script>
