--- a/src/server/ui/html/index.html
+++ b/src/server/ui/html/index.html
@@ -63,7 +63,7 @@
             <div class="lang presented" id="en">
                 <h1>Welcome to myevent!</h1>
                 <!-- <p>Thank you for installing and using myevent! Let's get started by setting it up! First plan of action is to log in to the admin panel where you can replace this page here with your own landing page!</p> -->
-                <a href="/admin/login" class="button" onclick="sessionStorage.setItem( 'lang', 'de' )">To the admin panel</a>
+                <a href="/admin/login" class="button" onclick="sessionStorage.setItem( 'lang', 'en' )">To the admin panel</a>
             </div>
             <div class="lang" id="de">
                 <h1>Willkommen zu myevent!</h1>
