progress on setup

--- a/src/server/admin/ui/welcome.html
+++ b/src/server/admin/ui/welcome.html
@@ -19,6 +19,7 @@
             <p>myevent, the new way to sell your tickets online!</p>
             <p>Let's get started setting up your event!</p>
             <p id="warranty">Note: As a project licensed under the GNU General Public License Version 3.0-or-later (GPL 3.0+), this software comes with ABSOLUTELY NO WARRANTY TO THE EXTENT PERMITTED BY APPLICABLE LAW</p>
+            <p>It is strongly advised to read through our <a href="https://myevent.janishutz.com/docs/setup/">setup guide</a> whilst doing the setup, as it contains vital information and shows you additional options which you can configure in the configuration file.</p>
             <a href="/admin/setup">Getting Started!</a>
         </div>
 
