--- a/src/server/admin/ui/setup.html
+++ b/src/server/admin/ui/setup.html
@@ -22,16 +22,92 @@
                 </select>
             </div>
             <div class="setup-app">
-                <div class="setup-page">
+                <!-- TODO: In docs note that user has to set up the mail account via config file. -->
+                <!-- Root account setup -->
+                <div class="setup-page" id="1">
                     <h1>Setup</h1>
-                    <form action="/admin/auth" method="post" class="form">
-                        <label for="mail">Email address</label><br>
+                    <p class="explanation">Now, let's create an admin account! Please choose a secure password, as this user has the highest amounts of privileges.</p>
+                    <form class="form" style="margin-bottom: 0;">
+                        <label for="mail">Email address *</label><br>
                         <input type="email" id="mail" name="mail" required class="input"><br>
-                        <label for="pwd">Password</label><br>
-                        <input type="password" id="pwd" name="pwd" required class="input"><br>
-                        <input type="submit" value="Log in" class="button">
+                        <label for="pwd1">Password *</label><br>
+                        <input type="password" id="pwd1" name="pwd1" required class="input"><br>
+                        <label for="pwd2">Repeat password *</label><br>
+                        <input type="password" id="pwd2" name="pwd2" required class="input"><br>
                     </form>
+                    <button class="button" style="margin-bottom: 3%;">Continue</button>
                 </div>
+
+                <!-- Company name & offered language(s) & choice if homepage or not -->
+                <div class="setup-page" id="2">
+                    <h1>Setup</h1>
+                    <p class="explanation">Next off, we need to know your organisation's name, the language(s) you want to offer and you need to select if a simple homepage should be generated from templates for you. You may choose the template in the next step.</p>
+                    <form class="form" style="margin-bottom: 0;">
+                        <label for="name">Organisation name *</label><br>
+                        <input type="text" id="name" name="name" required class="input"><br>
+                        <p>Languages * (one required, if none selected, uses English only)</p>
+                        <div style="margin-bottom: 1%;">
+                            <label for="lang-en">English</label>
+                            <input type="checkbox" id="lang-en" name="lang-en">
+                        </div>
+                        <div style="margin-bottom: 3%;">
+                            <label for="lang-de">German</label>
+                            <input type="checkbox" id="lang-de" name="lang-de">
+                        </div>
+
+                        <div style="margin-bottom: 3%;">
+                            <label for="homepage">Homepage?</label>
+                            <input type="checkbox" id="homepage" name="homepage">
+                        </div>
+                    </form>
+                    <button class="button" style="margin-bottom: 3%;">Continue</button>
+                </div>
+
+                <!-- Setup of homepage (if activated previously) -->
+                <div class="setup-page" id="3">
+                    <h1>Setup</h1>
+                    <p class="explanation">Since you have activated the homepage on the previous step, let's set it up now. Please choose from a template which you can find <a href="https://myevent.janishutz.com/docs/homepage/templates">here</a></p>
+                    <form class="form" style="margin-bottom: 0;">
+                        <label for="template">Choose homepage template</label><br>
+                        <select name="template" id="template" style="margin-bottom: 3%;">
+                            <option value="1">Template 1</option>
+                            <option value="2">Template 2</option>
+                            <option value="3">Template 3</option>
+                            <option value="4">Template 4</option>
+                        </select>
+                        <label for="pwd1">Promotional text *</label><br>
+                        <textarea name="" id="" rows="10" class="input" minlength="100" placeholder="Your promotional text"></textarea>
+                    </form>
+                    <button class="button" style="margin-bottom: 1.5%; margin-top: 2%;">Preview</button>
+                    <button class="button" style="margin-bottom: 3%;">Continue</button>
+                </div>
+
+                <!-- Payment options (one required) -->
+                <div class="setup-page" id="3">
+                    <h1>Setup</h1>
+                    <p class="explanation">Now, please choose a payment option. When entering the admin panel for the first time after completing the setup, you'll be prompted to enter tokens which you can find in the payment provider's dashboard. You there may also add more payment options that are provided by plugins. Please refer to the <a href="https://myevent.janishutz.com/docs/payments">docs</a> to see advantages and disadvantages of each payment provider.</p>
+                    <form class="form" style="margin-bottom: 0;">
+                        <label for="name">Organisation name *</label><br>
+                        <input type="text" id="name" name="name" required class="input"><br>
+                        <p>Languages * (one required, if none selected, uses English only)</p>
+                        <div style="margin-bottom: 1%;">
+                            <label for="lang-en">English</label>
+                            <input type="checkbox" id="lang-en" name="lang-en">
+                        </div>
+                        <div style="margin-bottom: 3%;">
+                            <label for="lang-de">German</label>
+                            <input type="checkbox" id="lang-de" name="lang-de">
+                        </div>
+
+                        <div style="margin-bottom: 3%;">
+                            <label for="homepage">Homepage?</label>
+                            <input type="checkbox" id="homepage" name="homepage">
+                        </div>
+                    </form>
+                    <button class="button" style="margin-bottom: 1.5%; margin-top: 2%;">Preview</button>
+                    <button class="button" style="margin-bottom: 3%;">Continue</button>
+                </div>
+
             </div>
         </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
