add coloris.js color picker & work on settings

--- a/src/webapp/public/index.html
+++ b/src/webapp/public/index.html
@@ -11,6 +11,8 @@
     </title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
     <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="coloris.min.css">
+    <script defer src="coloris.min.js"></script>
 </head>
 
 <body>
