prepare payment gateway settings

--- a/src/server/ui/home/active/en/index.html
+++ b/src/server/ui/home/active/en/index.html
@@ -3,9 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <link rel="stylesheet" href="/supportFiles/style.css">
+        <title>libreevent</title>
     </head>
     <body>
-        <h1>Test</h1>
+        <nav></nav>
+        <img src="/otherAssets/logo.png" alt="libreevent logo" class="logo">
+        <h1>Welcome to libreevent!</h1>
+        <p>No start page has been configured yet! Please configure one either by using the configurator in the settings or by uploading your own HTML page to the correct folder as detailed <a href="https://libreevent.janishutz.com/docs/admin-panel/pages">here</a></p>
     </body>
 </html>
