add start page settings

--- a/src/server/ui/home/index.html
+++ b/src/server/ui/home/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="/supportFiles/style.css">
         <link rel="stylesheet" href="/startPage/mainStyle">
         <script defer src="/startPage/helperFunction"></script>
-        <title>{{ pageName }} :: Home</title>
+        <title>libreevent</title>
     </head>
     <body>
         <nav>
@@ -19,7 +19,7 @@
             <button onclick="changeTheme();" id="themeSelector">&#9789;</button>
         </nav>
         <img src="/otherAssets/logo.png" alt="libreevent logo" class="logo">
-        <h1>Welcome to {{ pageName }}!</h1>
-        <p>{{ data.description }}</p>
+        <h1>Welcome to libreevent!</h1>
+        <p>No start page has been configured yet! Please configure one either by using the configurator in the settings or by uploading your own HTML page to the correct folder as detailed <a href="https://libreevent.janishutz.com/docs/admin-panel/pages">here</a></p>
     </body>
 </html>
