--- a/src/server/ui/home/active/en/index.html
+++ b/src/server/ui/home/active/en/index.html
@@ -18,8 +18,10 @@
             <a href="/account">Account</a> |
             <button onclick="changeTheme();" id="themeSelector">&#9789;</button>
         </nav>
-        <img src="/otherAssets/logo.png" alt="libreevent logo" class="logo">
-        <h1>Welcome to libreevent!</h1>
-        <p>No start page has been configured yet! Please configure one either by using the configurator in the settings or by uploading your own HTML page to the correct folder as detailed <a href="https://libreevent.janishutz.com/docs/admin-panel/pages">here</a></p>
+        <div class="content">
+            <img src="/otherAssets/logo.png" alt="libreevent logo" class="logo">
+            <h1>Welcome to libreevent!</h1>
+            <p>No start page has been configured yet! Please configure one either by using the configurator in the settings or by uploading your own HTML page to the correct folder as detailed <a href="https://libreevent.janishutz.com/docs/admin-panel/pages">here</a></p>
+        </div>
     </body>
 </html>
